@@ -1,0 +1,71 @@
+<?php
+// $Id$
+
+/**
+ * Test cases for common syndication parser.
+ *
+ * @todo Break out into Drupal independent test framework.
+ * @todo Could I use DrupalUnitTestCase here?
+ */
+class CommonSyndicationParserTestCase extends DrupalWebTestCase {
+  /**
+   * Describe this test.
+   */
+  public function getInfo() {
+    return array(
+      'name' => t('Common Syndication Parser'),
+      'description' => t('Unit tests for Common Syndication Parser.'),
+      'group' => t('Feeds'),
+    );
+  }
+
+  /**
+   * Set up.
+   */
+  public function setUp() {
+    parent::setUp('feeds', 'feeds_ui', 'ctools');
+    feeds_include_library('common_syndication_parser.inc', 'common_syndication_parser');
+  }
+
+  /**
+   * Dispatch tests, only use one entry point method testX to save time.
+   */
+  public function test() {
+    $this->_testRSS10();
+    $this->_testRSS2();
+  }
+
+  /**
+   * Test RSS 1.0.
+   */
+  protected function _testRSS10() {
+    $string = $this->readFeed('magento.rss1');
+    $feed = common_syndication_parser_parse($string);
+    $this->assertEqual($feed['title'], 'Magento Sites Network - A directory listing of Magento Commerce stores');
+    $this->assertEqual($feed['items'][0]['title'], 'Gezondheidswebwinkel');
+    $this->assertEqual($feed['items'][0]['url'], 'http://www.magentosites.net/store/2010/04/28/gezondheidswebwinkel/index.html');
+    $this->assertEqual($feed['items'][1]['url'], 'http://www.magentosites.net/store/2010/04/26/mybobinocom/index.html');
+  }
+
+  /**
+   * Test RSS 2.
+   */
+  protected function _testRSS2() {
+    $string = $this->readFeed('developmentseed.rss2');
+    $feed = common_syndication_parser_parse($string);
+    $this->assertEqual($feed['title'], 'Development Seed - Technological Solutions for Progressive Organizations');
+    $this->assertEqual($feed['items'][0]['title'], 'Open Atrium Translation Workflow: Two Way Translation Updates');
+    $this->assertEqual($feed['items'][1]['url'], 'http://developmentseed.org/blog/2009/oct/05/week-dc-tech-october-5th-edition');
+  }
+
+  /**
+   * Helper to read a feed.
+   */
+  protected function readFeed($filename) {
+    $feed = dirname(__FILE__) .'/feeds/'. $filename;
+    $handle = fopen($feed, 'r');
+    $string = fread($handle, filesize($feed));
+    fclose($handle);
+    return $string;
+  }
+}
